# open_vins_learning

config/euroc_mav/: estimator_config.yaml
ov_core/: CMakeLists.txt
ov_core/cmake/: ROS1.cmake
ov_core/src/: test_tracking.cpp
ov_core/src/cam/: CamBase.h  CamEqui.h  CamRadtan.h
ov_core/src/track/: TrackKLT.cpp
ov_core/src/types/: IMU.h  JPLQuat.h  Landmark.cpp  Landmark.h  LandmarkRepresentation.h  PoseJPL.h  Type.h  Vec.h
ov_core/src/utils/: colors.h  dataset_reader.h  opencv_lambda_body.h  opencv_yaml_parse.h  print.cpp  print.h  quat_ops.h
ov_msckf/: CMakeLists.txt
ov_msckf/launch/: subscribe.launch
ov_msckf/src/: run_subscribe_msckf.cpp
ov_msckf/src/core/: VioManager.cpp  VioManager.h  VioManagerHelper.cpp  VioManagerOptions.h
ov_msckf/src/ros/: ROS1Visualizer.cpp  ROS1Visualizer.h  ROSVisualizerHelper.cpp  ROSVisualizerHelper.h
ov_msckf/src/state/: Propagator.cpp  Propagator.h
ov_msckf/src/utils/: NoiseManager.h
